--- a/client/src/components/TopCountries.css
+++ b/client/src/components/TopCountries.css
@@ -7,7 +7,7 @@
   margin-bottom: 30px;
   transition: box-shadow 0.3s ease;
   height: 80vh;
-  overflow-x: auto;
+  overflow: hidden;
 }
 
 .chart-container:hover {
